--- a/public/css/sgcustom.css
+++ b/public/css/sgcustom.css
@@ -31,6 +31,7 @@
   opacity: 0.7;
   background-color: #fff;
   z-index: 1051;
+  display: none;
 }
 
 #loading-image {
@@ -44,6 +45,7 @@
     right:0;
     bottom:0;
     margin:auto;
+
 }
 
 .addNewPrint:focus {
